# fastapi-alembic-tutorial

./: .gitignore  README.md  alembic.ini  pyproject.toml  setup.cfg
alembic/: env.py
alembic/versions/: 9f1dcc600d5e_initial_revision.py
sql_app/: crud.py  main.py  schemas.py
sql_app/db/: base.py  models.py
